relative_path added

--- a/src/bayesian_segmentation.ipynb
+++ b/src/bayesian_segmentation.ipynb
@@ -2,37 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
-      "[Open3D INFO] WebRTC GUI backend enabled.\n",
-      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/lib/python3/dist-packages/scipy/__init__.py:146: UserWarning: A NumPy version >=1.17.3 and <1.25.0 is required for this version of SciPy (detected version 1.26.4\n",
-      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import AutoViewpointGeneration\n",
-    "from open3d.geometry import TriangleMesh, PointCloud\n",
-    "from open3d.visualization.rendering import MaterialRecord\n",
+    "from open3d.geometry import PointCloud\n",
     "import open3d as o3d  # . . . . . . . . . . . . . . . Open3D\n",
     "import numpy as np\n",
+    "import os\n",
+    "\n",
     "\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -41,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,6 +43,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -67,22 +52,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading model from /home/macs/bayesian_segmentation/parts/Sphere/Model/Sphere.stl\n",
-      "Loading model: /home/macs/bayesian_segmentation/parts/Sphere/Model/Sphere.stl\n",
-      "folder: /home/macs/bayesian_segmentation/parts/Sphere/Model, ext: .stl\n",
-      "folder: /home/macs/bayesian_segmentation/parts/Sphere/PointCloud\n"
+      "Loading model from c:\\Users\\stlp\\OneDrive - UW\\Documents\\InspectionMLviewpointGen\\src\\parts\\Sphere.stl\n",
+      "Loading model: c:\\Users\\stlp\\OneDrive - UW\\Documents\\InspectionMLviewpointGen\\src\\parts\\Sphere.stl\n",
+      "folder: c:\\Users\\stlp\\OneDrive - UW\\Documents\\InspectionMLviewpointGen\\src\\parts, ext: .stl\n",
+      "folder: c:\\Users\\stlp\\OneDrive - UW\\Documents\\InspectionMLviewpointGen\\src\\parts\\Sphere\\PointCloud\n"
      ]
     }
    ],
    "source": [
-    "my_avg.load_model(\"/home/macs/bayesian_segmentation/parts/Sphere/Model/Sphere.stl\",\"mm\",[0., 1., 0., 1.])\n",
+    "relative_path = os.path.join( 'parts', 'Sphere.stl')\n",
+    "absolute_path = os.path.abspath(relative_path)\n",
+    "my_avg.load_model(absolute_path,\"mm\",[0., 1., 0., 1.])\n",
     "my_avg.generate_pcd()\n",
     "pcd=PointCloud()\n",
     "pcd=my_avg.spcd.pcd\n",
@@ -91,6 +78,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -99,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -119,142 +107,141 @@
       "k: 9, Valid: True\n",
       "k: 8, Valid: False\n",
       "Partitioning planar patch 0 into regions:\n",
-      "287.08965227808585\n",
-      "min area found 2.745122049978448\n",
+      "266.38016641289903\n",
+      "min area found 2.5471000528736054\n",
       "|   iter    |  target   |     k     |\n",
       "-------------------------------------\n",
       "0.1\n",
       "total_point_out_percentage is zero\n",
-      "| \u001b[0m1        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m5.035    \u001b[0m |\n",
+      "| \u001b[0m1        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m4.671    \u001b[0m |\n",
       "total_point_out_percentage is zero\n",
-      "| \u001b[0m2        \u001b[0m | \u001b[0m-2.817   \u001b[0m | \u001b[0m8.235    \u001b[0m |\n",
+      "| \u001b[0m2        \u001b[0m | \u001b[0m-2.713   \u001b[0m | \u001b[0m7.641    \u001b[0m |\n",
       "total_point_out_percentage is zero\n",
-      "| \u001b[0m3        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m5.035    \u001b[0m |\n",
-      "| \u001b[0m4        \u001b[0m | \u001b[0m-0.09686 \u001b[0m | \u001b[0m3.811    \u001b[0m |\n",
+      "| \u001b[0m3        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m4.672    \u001b[0m |\n",
+      "| \u001b[0m4        \u001b[0m | \u001b[0m-0.1006  \u001b[0m | \u001b[0m3.536    \u001b[0m |\n",
       "=====================================\n",
-      "5\n",
+      "4\n",
       "Partitioning planar patch 1 into regions:\n",
-      "288.56003044733154\n",
-      "min area found 2.7591816564538965\n",
+      "265.1451891941194\n",
+      "min area found 2.535291326339605\n",
       "|   iter    |  target   |     k     |\n",
       "-------------------------------------\n",
       "0.1\n",
       "total_point_out_percentage is zero\n",
-      "| \u001b[0m1        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m5.06     \u001b[0m |\n",
+      "| \u001b[0m1        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m4.65     \u001b[0m |\n",
       "total_point_out_percentage is zero\n",
-      "| \u001b[0m2        \u001b[0m | \u001b[0m-2.778   \u001b[0m | \u001b[0m8.278    \u001b[0m |\n",
+      "| \u001b[0m2        \u001b[0m | \u001b[0m-2.713   \u001b[0m | \u001b[0m7.606    \u001b[0m |\n",
       "total_point_out_percentage is zero\n",
-      "| \u001b[0m3        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m5.061    \u001b[0m |\n",
-      "| \u001b[0m4        \u001b[0m | \u001b[0m-0.0978  \u001b[0m | \u001b[0m3.83     \u001b[0m |\n",
+      "| \u001b[0m3        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m4.65     \u001b[0m |\n",
+      "| \u001b[0m4        \u001b[0m | \u001b[0m-0.09978 \u001b[0m | \u001b[0m3.519    \u001b[0m |\n",
       "=====================================\n",
-      "5\n",
+      "4\n",
       "Partitioning planar patch 2 into regions:\n",
-      "289.37700887850474\n",
-      "min area found 2.7669935211030547\n",
+      "287.78592631925585\n",
+      "min area found 2.751779751529432\n",
       "|   iter    |  target   |     k     |\n",
       "-------------------------------------\n",
       "0.1\n",
       "total_point_out_percentage is zero\n",
-      "| \u001b[0m1        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m5.075    \u001b[0m |\n",
+      "| \u001b[0m1        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m5.047    \u001b[0m |\n",
       "total_point_out_percentage is zero\n",
-      "| \u001b[0m2        \u001b[0m | \u001b[0m-2.788   \u001b[0m | \u001b[0m8.301    \u001b[0m |\n",
+      "| \u001b[0m2        \u001b[0m | \u001b[0m-2.806   \u001b[0m | \u001b[0m8.255    \u001b[0m |\n",
       "total_point_out_percentage is zero\n",
-      "| \u001b[0m3        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m5.075    \u001b[0m |\n",
-      "| \u001b[0m4        \u001b[0m | \u001b[0m-0.1017  \u001b[0m | \u001b[0m3.841    \u001b[0m |\n",
+      "| \u001b[0m3        \u001b[0m | \u001b[0m-0.000341\u001b[0m | \u001b[0m5.047    \u001b[0m |\n",
+      "| \u001b[0m4        \u001b[0m | \u001b[0m-0.09118 \u001b[0m | \u001b[0m3.837    \u001b[0m |\n",
       "=====================================\n",
       "5\n",
       "Partitioning planar patch 3 into regions:\n",
-      "287.5680347063618\n",
-      "min area found 2.749696294092654\n",
+      "288.49381613960713\n",
+      "min area found 2.758548521979296\n",
       "|   iter    |  target   |     k     |\n",
       "-------------------------------------\n",
       "0.1\n",
       "total_point_out_percentage is zero\n",
-      "| \u001b[0m1        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m5.043    \u001b[0m |\n",
+      "| \u001b[0m1        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m5.059    \u001b[0m |\n",
       "total_point_out_percentage is zero\n",
-      "| \u001b[0m2        \u001b[0m | \u001b[0m-2.816   \u001b[0m | \u001b[0m8.249    \u001b[0m |\n",
-      "| \u001b[0m3        \u001b[0m | \u001b[0m-0.002088\u001b[0m | \u001b[0m5.043    \u001b[0m |\n",
-      "| \u001b[0m4        \u001b[0m | \u001b[0m-0.009214\u001b[0m | \u001b[0m4.65     \u001b[0m |\n",
+      "| \u001b[0m2        \u001b[0m | \u001b[0m-2.77    \u001b[0m | \u001b[0m8.276    \u001b[0m |\n",
+      "total_point_out_percentage is zero\n",
+      "| \u001b[0m3        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m5.059    \u001b[0m |\n",
+      "| \u001b[0m4        \u001b[0m | \u001b[0m-0.09679 \u001b[0m | \u001b[0m3.829    \u001b[0m |\n",
       "=====================================\n",
       "5\n",
       "Partitioning planar patch 4 into regions:\n",
-      "289.6072370430196\n",
-      "min area found 2.7691949393914563\n",
+      "285.09825811928937\n",
+      "min area found 2.726080541612917\n",
       "|   iter    |  target   |     k     |\n",
       "-------------------------------------\n",
       "0.1\n",
+      "| \u001b[0m1        \u001b[0m | \u001b[0m-0.007089\u001b[0m | \u001b[0m5.0      \u001b[0m |\n",
       "total_point_out_percentage is zero\n",
-      "| \u001b[0m1        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m5.079    \u001b[0m |\n",
-      "total_point_out_percentage is zero\n",
-      "| \u001b[0m2        \u001b[0m | \u001b[0m-2.81    \u001b[0m | \u001b[0m8.308    \u001b[0m |\n",
-      "total_point_out_percentage is zero\n",
-      "| \u001b[0m3        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m5.079    \u001b[0m |\n",
-      "| \u001b[0m4        \u001b[0m | \u001b[0m-0.096   \u001b[0m | \u001b[0m3.844    \u001b[0m |\n",
+      "| \u001b[0m2        \u001b[0m | \u001b[0m-2.835   \u001b[0m | \u001b[0m8.178    \u001b[0m |\n",
+      "| \u001b[0m3        \u001b[0m | \u001b[0m-0.007089\u001b[0m | \u001b[0m5.0      \u001b[0m |\n",
+      "| \u001b[0m4        \u001b[0m | \u001b[0m-0.0935  \u001b[0m | \u001b[0m3.784    \u001b[0m |\n",
       "=====================================\n",
-      "5\n",
+      "4\n",
       "Partitioning planar patch 5 into regions:\n",
-      "289.4457446083538\n",
-      "min area found 2.7676507651595115\n",
+      "290.21145375543665\n",
+      "min area found 2.7749723981297283\n",
       "|   iter    |  target   |     k     |\n",
       "-------------------------------------\n",
       "0.1\n",
       "total_point_out_percentage is zero\n",
-      "| \u001b[0m1        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m5.076    \u001b[0m |\n",
+      "| \u001b[0m1        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m5.089    \u001b[0m |\n",
       "total_point_out_percentage is zero\n",
-      "| \u001b[0m2        \u001b[0m | \u001b[0m-2.785   \u001b[0m | \u001b[0m8.303    \u001b[0m |\n",
+      "| \u001b[0m2        \u001b[0m | \u001b[0m-2.777   \u001b[0m | \u001b[0m8.325    \u001b[0m |\n",
       "total_point_out_percentage is zero\n",
-      "| \u001b[0m3        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m5.076    \u001b[0m |\n",
-      "| \u001b[0m4        \u001b[0m | \u001b[0m-0.09591 \u001b[0m | \u001b[0m3.842    \u001b[0m |\n",
+      "| \u001b[0m3        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m5.09     \u001b[0m |\n",
+      "| \u001b[0m4        \u001b[0m | \u001b[0m-0.1053  \u001b[0m | \u001b[0m3.852    \u001b[0m |\n",
       "=====================================\n",
       "5\n",
       "Partitioning planar patch 6 into regions:\n",
-      "264.2623214533972\n",
-      "min area found 2.5268494348153383\n",
+      "288.4243175506455\n",
+      "min area found 2.757883983541609\n",
       "|   iter    |  target   |     k     |\n",
       "-------------------------------------\n",
       "0.1\n",
       "total_point_out_percentage is zero\n",
-      "| \u001b[0m1        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m4.634    \u001b[0m |\n",
+      "| \u001b[0m1        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m5.058    \u001b[0m |\n",
       "total_point_out_percentage is zero\n",
-      "| \u001b[0m2        \u001b[0m | \u001b[0m-2.706   \u001b[0m | \u001b[0m7.581    \u001b[0m |\n",
+      "| \u001b[0m2        \u001b[0m | \u001b[0m-2.804   \u001b[0m | \u001b[0m8.274    \u001b[0m |\n",
       "total_point_out_percentage is zero\n",
-      "| \u001b[0m3        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m4.634    \u001b[0m |\n",
-      "| \u001b[0m4        \u001b[0m | \u001b[0m-0.09855 \u001b[0m | \u001b[0m3.508    \u001b[0m |\n",
+      "| \u001b[0m3        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m5.058    \u001b[0m |\n",
+      "| \u001b[0m4        \u001b[0m | \u001b[0m-0.09961 \u001b[0m | \u001b[0m3.828    \u001b[0m |\n",
       "=====================================\n",
-      "4\n",
+      "5\n",
       "Partitioning planar patch 7 into regions:\n",
-      "266.06878862216547\n",
-      "min area found 2.5441226901145035\n",
-      "|   iter    |  target   |     k     |\n",
-      "-------------------------------------\n",
-      "0.1\n",
-      "total_point_out_percentage is zero\n",
-      "| \u001b[0m1        \u001b[0m | \u001b[0m-0.000367\u001b[0m | \u001b[0m4.666    \u001b[0m |\n",
-      "total_point_out_percentage is zero\n",
-      "| \u001b[0m2        \u001b[0m | \u001b[0m-2.71    \u001b[0m | \u001b[0m7.632    \u001b[0m |\n",
-      "total_point_out_percentage is zero\n",
-      "| \u001b[0m3        \u001b[0m | \u001b[0m-0.000367\u001b[0m | \u001b[0m4.666    \u001b[0m |\n",
-      "| \u001b[0m4        \u001b[0m | \u001b[0m-0.09723 \u001b[0m | \u001b[0m3.532    \u001b[0m |\n",
-      "=====================================\n",
-      "4\n",
-      "Partitioning planar patch 8 into regions:\n",
-      "265.63494847750684\n",
-      "min area found 2.539974354785041\n",
+      "265.59051683507914\n",
+      "min area found 2.5395495039400973\n",
       "|   iter    |  target   |     k     |\n",
       "-------------------------------------\n",
       "0.1\n",
       "total_point_out_percentage is zero\n",
       "| \u001b[0m1        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m4.658    \u001b[0m |\n",
       "total_point_out_percentage is zero\n",
-      "| \u001b[0m2        \u001b[0m | \u001b[0m-2.718   \u001b[0m | \u001b[0m7.62     \u001b[0m |\n",
+      "| \u001b[0m2        \u001b[0m | \u001b[0m-2.697   \u001b[0m | \u001b[0m7.619    \u001b[0m |\n",
       "total_point_out_percentage is zero\n",
-      "| \u001b[0m3        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m4.659    \u001b[0m |\n",
-      "| \u001b[0m4        \u001b[0m | \u001b[0m-0.0955  \u001b[0m | \u001b[0m3.526    \u001b[0m |\n",
+      "| \u001b[0m3        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m4.658    \u001b[0m |\n",
+      "| \u001b[0m4        \u001b[0m | \u001b[0m-0.09775 \u001b[0m | \u001b[0m3.525    \u001b[0m |\n",
       "=====================================\n",
       "4\n",
-      "overall packing efficiency 0.5961631085858488\n",
-      "total point out percentage 7.903791938609623e-05\n",
-      "[PointCloud with 672 points., PointCloud with 629 points., PointCloud with 565 points., PointCloud with 561 points., PointCloud with 543 points., PointCloud with 584 points., PointCloud with 568 points., PointCloud with 669 points., PointCloud with 661 points., PointCloud with 530 points., PointCloud with 685 points., PointCloud with 571 points., PointCloud with 558 points., PointCloud with 552 points., PointCloud with 635 points., PointCloud with 555 points., PointCloud with 662 points., PointCloud with 550 points., PointCloud with 550 points., PointCloud with 654 points., PointCloud with 560 points., PointCloud with 665 points., PointCloud with 651 points., PointCloud with 542 points., PointCloud with 559 points., PointCloud with 579 points., PointCloud with 581 points., PointCloud with 621 points., PointCloud with 537 points., PointCloud with 686 points., PointCloud with 689 points., PointCloud with 696 points., PointCloud with 652 points., PointCloud with 668 points., PointCloud with 675 points., PointCloud with 682 points., PointCloud with 681 points., PointCloud with 663 points., PointCloud with 689 points., PointCloud with 654 points., PointCloud with 662 points., PointCloud with 688 points.]\n"
+      "Partitioning planar patch 8 into regions:\n",
+      "287.80378190023293\n",
+      "min area found 2.751950484778319\n",
+      "|   iter    |  target   |     k     |\n",
+      "-------------------------------------\n",
+      "0.1\n",
+      "total_point_out_percentage is zero\n",
+      "| \u001b[0m1        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m5.047    \u001b[0m |\n",
+      "total_point_out_percentage is zero\n",
+      "| \u001b[0m2        \u001b[0m | \u001b[0m-2.813   \u001b[0m | \u001b[0m8.256    \u001b[0m |\n",
+      "total_point_out_percentage is zero\n",
+      "| \u001b[0m3        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m5.047    \u001b[0m |\n",
+      "| \u001b[0m4        \u001b[0m | \u001b[0m-0.09481 \u001b[0m | \u001b[0m3.82     \u001b[0m |\n",
+      "=====================================\n",
+      "5\n",
+      "overall packing efficiency 0.6113399660095276\n",
+      "total point out percentage 0.0008290350783453674\n",
+      "[PointCloud with 640 points., PointCloud with 668 points., PointCloud with 691 points., PointCloud with 699 points., PointCloud with 661 points., PointCloud with 687 points., PointCloud with 684 points., PointCloud with 666 points., PointCloud with 596 points., PointCloud with 546 points., PointCloud with 577 points., PointCloud with 568 points., PointCloud with 695 points., PointCloud with 557 points., PointCloud with 553 points., PointCloud with 589 points., PointCloud with 668 points., PointCloud with 653 points., PointCloud with 743 points., PointCloud with 818 points., PointCloud with 739 points., PointCloud with 651 points., PointCloud with 558 points., PointCloud with 681 points., PointCloud with 583 points., PointCloud with 646 points., PointCloud with 545 points., PointCloud with 679 points., PointCloud with 575 points., PointCloud with 628 points., PointCloud with 537 points., PointCloud with 565 points., PointCloud with 692 points., PointCloud with 691 points., PointCloud with 665 points., PointCloud with 666 points., PointCloud with 670 points., PointCloud with 545 points., PointCloud with 556 points., PointCloud with 645 points., PointCloud with 558 points.]\n"
      ]
     }
    ],
@@ -290,7 +277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
