updated to have comments

--- a/src/bayesian_segmentation.ipynb
+++ b/src/bayesian_segmentation.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
+      "[Open3D INFO] WebRTC GUI backend enabled.\n",
+      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
+     ]
+    }
+   ],
    "source": [
     "import AutoViewpointGeneration\n",
     "from open3d.geometry import PointCloud\n",
@@ -20,12 +30,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Set Camera Parameters"
+    "# Set Camera Parameters\n",
+    "\n",
+    "- Load the camera details in this section\n",
+    "- Depth of field is represented by DOF\n",
+    "- Field of view  is calculated using the parameters such as magnification, region of interest , sensor size and pixel resolution"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,12 +61,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load Model and Visualize Model"
+    "## Load Model and Visualize Model\n",
+    "\n",
+    "- Here the stl model Sphere.stl is used, the file can be found in the parts folder.\n",
+    "- In order to test other stl files, place the desired stl file in the parts folder and type in your stl file name in the places of \"Sphere.stl\"\n",
+    "- After loading the model the point cloud for that model is generated on a new window, check the visualization and close it inorder to proceed forward\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -82,169 +100,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Perform Segmentation with Bayesian optimization"
+    "# Perform Segmentation with Bayesian optimization"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Partitioning part into planar patches:\n",
-      "10\n",
-      "Finding bs_high...\n",
-      "bs_high = 1 is not valid, incrementing bs_high...\n",
-      "bs_high = 2 is not valid, incrementing bs_high...\n",
-      "bs_high = 4 is not valid, incrementing bs_high...\n",
-      "bs_high = 8 is not valid, incrementing bs_high...\n",
-      "bs_high = 16 is valid. Optimizing k...\n",
-      "k: 12, Valid: True\n",
-      "k: 10, Valid: True\n",
-      "k: 9, Valid: True\n",
-      "k: 8, Valid: False\n",
-      "Partitioning planar patch 0 into regions:\n",
-      "266.38016641289903\n",
-      "min area found 2.5471000528736054\n",
-      "|   iter    |  target   |     k     |\n",
-      "-------------------------------------\n",
-      "0.1\n",
-      "total_point_out_percentage is zero\n",
-      "| \u001b[0m1        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m4.671    \u001b[0m |\n",
-      "total_point_out_percentage is zero\n",
-      "| \u001b[0m2        \u001b[0m | \u001b[0m-2.713   \u001b[0m | \u001b[0m7.641    \u001b[0m |\n",
-      "total_point_out_percentage is zero\n",
-      "| \u001b[0m3        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m4.672    \u001b[0m |\n",
-      "| \u001b[0m4        \u001b[0m | \u001b[0m-0.1006  \u001b[0m | \u001b[0m3.536    \u001b[0m |\n",
-      "=====================================\n",
-      "4\n",
-      "Partitioning planar patch 1 into regions:\n",
-      "265.1451891941194\n",
-      "min area found 2.535291326339605\n",
-      "|   iter    |  target   |     k     |\n",
-      "-------------------------------------\n",
-      "0.1\n",
-      "total_point_out_percentage is zero\n",
-      "| \u001b[0m1        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m4.65     \u001b[0m |\n",
-      "total_point_out_percentage is zero\n",
-      "| \u001b[0m2        \u001b[0m | \u001b[0m-2.713   \u001b[0m | \u001b[0m7.606    \u001b[0m |\n",
-      "total_point_out_percentage is zero\n",
-      "| \u001b[0m3        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m4.65     \u001b[0m |\n",
-      "| \u001b[0m4        \u001b[0m | \u001b[0m-0.09978 \u001b[0m | \u001b[0m3.519    \u001b[0m |\n",
-      "=====================================\n",
-      "4\n",
-      "Partitioning planar patch 2 into regions:\n",
-      "287.78592631925585\n",
-      "min area found 2.751779751529432\n",
-      "|   iter    |  target   |     k     |\n",
-      "-------------------------------------\n",
-      "0.1\n",
-      "total_point_out_percentage is zero\n",
-      "| \u001b[0m1        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m5.047    \u001b[0m |\n",
-      "total_point_out_percentage is zero\n",
-      "| \u001b[0m2        \u001b[0m | \u001b[0m-2.806   \u001b[0m | \u001b[0m8.255    \u001b[0m |\n",
-      "total_point_out_percentage is zero\n",
-      "| \u001b[0m3        \u001b[0m | \u001b[0m-0.000341\u001b[0m | \u001b[0m5.047    \u001b[0m |\n",
-      "| \u001b[0m4        \u001b[0m | \u001b[0m-0.09118 \u001b[0m | \u001b[0m3.837    \u001b[0m |\n",
-      "=====================================\n",
-      "5\n",
-      "Partitioning planar patch 3 into regions:\n",
-      "288.49381613960713\n",
-      "min area found 2.758548521979296\n",
-      "|   iter    |  target   |     k     |\n",
-      "-------------------------------------\n",
-      "0.1\n",
-      "total_point_out_percentage is zero\n",
-      "| \u001b[0m1        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m5.059    \u001b[0m |\n",
-      "total_point_out_percentage is zero\n",
-      "| \u001b[0m2        \u001b[0m | \u001b[0m-2.77    \u001b[0m | \u001b[0m8.276    \u001b[0m |\n",
-      "total_point_out_percentage is zero\n",
-      "| \u001b[0m3        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m5.059    \u001b[0m |\n",
-      "| \u001b[0m4        \u001b[0m | \u001b[0m-0.09679 \u001b[0m | \u001b[0m3.829    \u001b[0m |\n",
-      "=====================================\n",
-      "5\n",
-      "Partitioning planar patch 4 into regions:\n",
-      "285.09825811928937\n",
-      "min area found 2.726080541612917\n",
-      "|   iter    |  target   |     k     |\n",
-      "-------------------------------------\n",
-      "0.1\n",
-      "| \u001b[0m1        \u001b[0m | \u001b[0m-0.007089\u001b[0m | \u001b[0m5.0      \u001b[0m |\n",
-      "total_point_out_percentage is zero\n",
-      "| \u001b[0m2        \u001b[0m | \u001b[0m-2.835   \u001b[0m | \u001b[0m8.178    \u001b[0m |\n",
-      "| \u001b[0m3        \u001b[0m | \u001b[0m-0.007089\u001b[0m | \u001b[0m5.0      \u001b[0m |\n",
-      "| \u001b[0m4        \u001b[0m | \u001b[0m-0.0935  \u001b[0m | \u001b[0m3.784    \u001b[0m |\n",
-      "=====================================\n",
-      "4\n",
-      "Partitioning planar patch 5 into regions:\n",
-      "290.21145375543665\n",
-      "min area found 2.7749723981297283\n",
-      "|   iter    |  target   |     k     |\n",
-      "-------------------------------------\n",
-      "0.1\n",
-      "total_point_out_percentage is zero\n",
-      "| \u001b[0m1        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m5.089    \u001b[0m |\n",
-      "total_point_out_percentage is zero\n",
-      "| \u001b[0m2        \u001b[0m | \u001b[0m-2.777   \u001b[0m | \u001b[0m8.325    \u001b[0m |\n",
-      "total_point_out_percentage is zero\n",
-      "| \u001b[0m3        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m5.09     \u001b[0m |\n",
-      "| \u001b[0m4        \u001b[0m | \u001b[0m-0.1053  \u001b[0m | \u001b[0m3.852    \u001b[0m |\n",
-      "=====================================\n",
-      "5\n",
-      "Partitioning planar patch 6 into regions:\n",
-      "288.4243175506455\n",
-      "min area found 2.757883983541609\n",
-      "|   iter    |  target   |     k     |\n",
-      "-------------------------------------\n",
-      "0.1\n",
-      "total_point_out_percentage is zero\n",
-      "| \u001b[0m1        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m5.058    \u001b[0m |\n",
-      "total_point_out_percentage is zero\n",
-      "| \u001b[0m2        \u001b[0m | \u001b[0m-2.804   \u001b[0m | \u001b[0m8.274    \u001b[0m |\n",
-      "total_point_out_percentage is zero\n",
-      "| \u001b[0m3        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m5.058    \u001b[0m |\n",
-      "| \u001b[0m4        \u001b[0m | \u001b[0m-0.09961 \u001b[0m | \u001b[0m3.828    \u001b[0m |\n",
-      "=====================================\n",
-      "5\n",
-      "Partitioning planar patch 7 into regions:\n",
-      "265.59051683507914\n",
-      "min area found 2.5395495039400973\n",
-      "|   iter    |  target   |     k     |\n",
-      "-------------------------------------\n",
-      "0.1\n",
-      "total_point_out_percentage is zero\n",
-      "| \u001b[0m1        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m4.658    \u001b[0m |\n",
-      "total_point_out_percentage is zero\n",
-      "| \u001b[0m2        \u001b[0m | \u001b[0m-2.697   \u001b[0m | \u001b[0m7.619    \u001b[0m |\n",
-      "total_point_out_percentage is zero\n",
-      "| \u001b[0m3        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m4.658    \u001b[0m |\n",
-      "| \u001b[0m4        \u001b[0m | \u001b[0m-0.09775 \u001b[0m | \u001b[0m3.525    \u001b[0m |\n",
-      "=====================================\n",
-      "4\n",
-      "Partitioning planar patch 8 into regions:\n",
-      "287.80378190023293\n",
-      "min area found 2.751950484778319\n",
-      "|   iter    |  target   |     k     |\n",
-      "-------------------------------------\n",
-      "0.1\n",
-      "total_point_out_percentage is zero\n",
-      "| \u001b[0m1        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m5.047    \u001b[0m |\n",
-      "total_point_out_percentage is zero\n",
-      "| \u001b[0m2        \u001b[0m | \u001b[0m-2.813   \u001b[0m | \u001b[0m8.256    \u001b[0m |\n",
-      "total_point_out_percentage is zero\n",
-      "| \u001b[0m3        \u001b[0m | \u001b[0m-0.0     \u001b[0m | \u001b[0m5.047    \u001b[0m |\n",
-      "| \u001b[0m4        \u001b[0m | \u001b[0m-0.09481 \u001b[0m | \u001b[0m3.82     \u001b[0m |\n",
-      "=====================================\n",
-      "5\n",
-      "overall packing efficiency 0.6113399660095276\n",
-      "total point out percentage 0.0008290350783453674\n",
-      "[PointCloud with 640 points., PointCloud with 668 points., PointCloud with 691 points., PointCloud with 699 points., PointCloud with 661 points., PointCloud with 687 points., PointCloud with 684 points., PointCloud with 666 points., PointCloud with 596 points., PointCloud with 546 points., PointCloud with 577 points., PointCloud with 568 points., PointCloud with 695 points., PointCloud with 557 points., PointCloud with 553 points., PointCloud with 589 points., PointCloud with 668 points., PointCloud with 653 points., PointCloud with 743 points., PointCloud with 818 points., PointCloud with 739 points., PointCloud with 651 points., PointCloud with 558 points., PointCloud with 681 points., PointCloud with 583 points., PointCloud with 646 points., PointCloud with 545 points., PointCloud with 679 points., PointCloud with 575 points., PointCloud with 628 points., PointCloud with 537 points., PointCloud with 565 points., PointCloud with 692 points., PointCloud with 691 points., PointCloud with 665 points., PointCloud with 666 points., PointCloud with 670 points., PointCloud with 545 points., PointCloud with 556 points., PointCloud with 645 points., PointCloud with 558 points.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "pcds=my_avg.smart_partition()\n",
